clusters/production/vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 80
  tls:
    secretName: vaultwarden-certificate-secret
